--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf8"/>
 <title>Bass Mystery Dungeon</title>
 <script src="rot.min.js"></script>
 <script src="main.js"></script>
