Begin replacing ROT.Display

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
 <body onload="Game.init()">
 	<h1>Bass Mystery Dungeon</h1>
+	<canvas id="game" width="160" height="160"></canvas>
 </body>
 </html>
